--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
-    <title>Laksa19 | MIKHMON : Mikrotik Hotspot Monitor </title>
+    <title>Phenix-IT | PHENIXSPOT : Mikrotik Hotspot Monitor </title>
     <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik." />
+		<meta name="description" content="Phenix-IT | PHENIXSPOT : Mikrotik Hotspot Monitor est une application web qui simplifie la gestion des hotspots MikroTik." />
 		<meta name="keywords" content="mikhmon,mikrotik,voucher,routeros,api mikrotik,rtrwnet, rtrw/net,hotspot,mikrotik api" />
 		<meta http-equiv="expires" content="0">
 		<meta name="robots" content="index, follow" />
-		<meta property="og:title" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor">
-		<meta property="og:description" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik.">
-		<meta property="og:image" content="https://laksa19.github.io/img/mikhmonv3.png">
-		<meta property="og:image:alt" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor">
+		<meta property="og:title" content="Phenix-IT | PHENIXSPOT : Mikrotik Hotspot Manager">
+		<meta property="og:description" content="Phenix-IT | PHENIXSPOT : Mikrotik Hotspot Manager est une application web qui simplifie la gestion des hotspots MikroTik.">
+		<meta property="og:image" content="https://phenix-it.github.io/phenixspot/img/mikhmonv3.png">
+		<meta property="og:image:alt" content="Phenix-IT | PHENIXSPOT : Mikrotik Hotspot Manager">
 		<meta property="og:type" content="website">
-	  	<meta property="og:url" content="https://laksa19.github.io">
+	  	<meta property="og:url" content="https://phenix-it.github.io/phenixspot/">
 		<!-- jquery -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" integrity="sha256-f6DVw/U4x2+HjgEqw5BZf67Kq/5vudRZuRkljnbF344=" crossorigin="anonymous"></script>
 		<!-- markdown -->
@@ -117,9 +117,9 @@
 	  		<p>Mikrotik Hotspot Monitor</p>
 	  		<p>Mikhmon adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik, tanpa menggunakan radius server. <a href="./?mikhmon/v3" title="Read more..."><em>Baca selengkapnya...</em></a>
 	  		</p>
-	  		<p><img src="./img/mikhmonv3.png" alt="MIKHMON V3" title="MIKHMON V3"></p>
-			<h3 id="mikhmon-v4-beta2">MIKHMON V4 Beta2</h3>
-			<p>Silakan cek di <a href="./?mikhmon-v4-beta2" title="Mikhmon V4 Beta">link ini</a></p>
+	  		<p><img src="./img/mikhmonv3.png" alt="PHENIXSPOT V3" title="PHENIXSPOT V3"></p>
+			<h3 id="mikhmon-v4-beta2">PHENIXSPOT V4 Beta2</h3>
+			<p>Silakan cek di <a href="./?mikhmon-v4-beta2" title="PHENIXSPOT V4 Beta">link ini</a></p>
 	  		<hr>
 	  		<h3 id="template-hotspot-mikrotik">TEMPLATE HOTSPOT MIKROTIK</h3>
 	  		<p>Template login page hotspot MikroTik</p>
