--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 	  	<div id="md_header">
 	  		<h1 id="laksa19githubio-hits">Laksa19.github.io <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flaksa19.github.io" alt="Hits"></h1>
 			<p>
-				| <a href="."><strong>LAKSA19</strong></a> 
-				| <a href="./?mikhmon/v3" title="MIKHMON"><strong>MIKHMON V3</strong></a> 
-				| <a href="./?mikhmon/v4" title="MIKHMON"><strong>MIKHMON V4</strong></a> 
-				| <a href="https://mikhmon.link" title="MIKHMON ONLINE Official"><strong>MIKHMON.LINK</strong></a>
-				| <a href="./?mikhmon/v3/tutorial" title="Tutorial Mikhmon V3"><strong>TUTORIAL</strong></a> 
+				| <a href="."><strong>Phenix-IT</strong></a> 
+				| <a href="./?mikhmon/v3" title="PHENIXSPOT"><strong>PHENIXSPOT V3</strong></a> 
+				| <a href="./?mikhmon/v4" title="PHENIXSPOT"><strong>PHENIXSPOT V4</strong></a> 
+				| <a href="https://mikhmon.link" title="PHENIXSPOT ONLINE Official"><strong>PHENIXSPOT.LINK</strong></a>
+				| <a href="./?mikhmon/v3/tutorial" title="Tutorial PHENIXSPOT V3"><strong>TUTORIAL</strong></a> 
 				| <a href="./?blog" title="Blog Mikhmon"><strong>BLOG</strong></a> 
 				| <a href="./?mikhmon/v3/voucher" title="Template voucher Mikhmon"><strong>VOUCHER</strong></a> 
 				| <a href="./?new-hotspot" title="Template login page hospot MikoTik"><strong>HOTSPOT</strong></a> 
@@ -112,7 +112,7 @@
 	  	</div>
 	  	<div id="md_body"></div>
 	  	<div class="home" style="height: auto !important; display:none;">
-			<h3 id="mikhmon">MIKHMON</h3>
+			<h3 id="mikhmon">PHENIXSPOT</h3>
 			
 	  		<p>Mikrotik Hotspot Monitor</p>
 	  		<p>Mikhmon adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik, tanpa menggunakan radius server. <a href="./?mikhmon/v3" title="Read more..."><em>Baca selengkapnya...</em></a>
